<resources>
    <string name="app_name">PLU Breakers</string>
    <string name="baked_extra_is_checked">BAKED_EXTRA</string>
    <string name="bread_extra_is_checked">BAKING_BREAD</string>
    <string name="baguette_extra_is_checked">BAKING_BAGUETTE</string>
    <string name="donuts_extra_is_checked">BAKING_DONUT</string>
    <string name="nuts_extra_is_checked">NUTS</string>
    <string name="rolls_extra_is_checked">BAKING_ROLL</string>
    <string name="snacks_sweet_extra_is_checked">BAKING_SWEET</string>
    <string name="snacks_salty_extra_is_checked">BAKING_SALTY</string>
    <string name="fruits_extra_sw_is_checked">FRUIT</string>
    <string name="vegetables_extra_sw_is_checked">VEGETABLE</string>
    <string name="candies_extra_sw_is_checked">CANDIES</string>
    <string name="codes_count_extra">CODES_COUNT_EXTRA</string>
    <string name="baked">Pieczywo</string>
    <string name="bread">Chleb</string>
    <string name="rolls">Bułki</string>
    <string name="nuts">Orzechy</string>
    <string name="others">Inne</string>
    <string name="all">Wszystko</string>
    <string name="test_config">Test - Konfiguracja</string>
    <string name="test">Test</string>
    <string name="code">Kod</string>
    <string name="code_plu">PLU</string>
    <string name="all_baked">Wszystko - Pieczywo</string>
    <string name="codes">Kody</string>
    <string name="training">Trening</string>
    <string name="snacks_sweet">Przekąski słodkie</string>
    <string name="snacks_salty">Przekąski słone</string>
    <string name="donuts">Pączki</string>
    <string name="candies">Cukierki</string>
    <string name="baguette">Bagietki</string>
    <string name="fruits">Owoce</string>
    <string name="empty_code_plu_toast">Kod PLU jest pusty!</string>
    <string name="vegetables">Warzywa</string>
    <string name="not_entered_code"> PLU </string>
    <string name="not_entered_code_description">Brak kodu</string>
    <string name="entered_code_description">Wpisany</string>
    <string name="empty_count_codes_test_toast">Wpisz liczbę kodów!</string>
    <string name="incorrect_count_codes_test_toast">Niepoprawna liczba kodów!(1-50)</string>
    <string name="good_luck_info_test_config">Na każdą odpowiedz masz 3 sekundy. Powodzenia!</string>
    <string name="choose_area_info_test_config">Wybierz obszar kodów.</string>

</resources>