<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".codetest.activity.TestConfigActivity">

    <EditText
        android:id="@+id/count_codes_test_et"
        android:layout_width="302dp"
        android:layout_height="65dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Podaj liczbę kodów (1-50)"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/start_test_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fruits_sw" />

    <TextView
        android:id="@+id/good_luck_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/good_luck_info_test_config"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_area_test_config_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/choose_area_info_test_config"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/good_luck_tv" />

    <Button
        android:id="@+id/start_test_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="START"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/baked_sw"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:minHeight="48dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/baked"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_area_test_config_tv" />

    <Switch
        android:id="@+id/fruits_sw"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center|start"
        android:minHeight="48dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/fruits"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candies_sw" />

    <Switch
        android:id="@+id/vegetables_sw"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:gravity="center|start"
        android:minHeight="48dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/vegetables"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baked_sw" />

    <Switch
        android:id="@+id/candies_sw"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center|start"
        android:minHeight="48dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/candies"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetables_sw" />

    <Switch
        android:id="@+id/rolls_sw"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:text="@string/rolls"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breads_sw" />

    <Switch
        android:id="@+id/donats_sw"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:text="@string/donats"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rolls_sw" />

    <Switch
        android:id="@+id/breads_sw"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:text="@string/bread"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baguette_sw" />

    <Switch
        android:id="@+id/baguette_sw"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:text="@string/baguette"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baked_sw" />

    <Switch
        android:id="@+id/snacks_sweet_sw"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:text="@string/snacks_sweet"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baked_sw" />

    <Switch
        android:id="@+id/snacks_salty_sw"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:text="@string/snacks_salty"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snacks_sweet_sw" />


</androidx.constraintlayout.widget.ConstraintLayout>